Addition of Bootstrap to Show Proposals and correction of some bugs that appeared